[gd_scene load_steps=19 format=3 uid="uid://bp6c7x4dytetk"]

[ext_resource type="Script" uid="uid://c8su3raob8fjo" path="res://Title/TitleScene.gd" id="1_eqpau"]
[ext_resource type="Theme" uid="uid://cwbdqmvx07r3k" path="res://Title/MainMenuButton_theme.tres" id="2_l7ppy"]
[ext_resource type="PackedScene" uid="uid://cnl53v0lrb1mv" path="res://Assets/UI/Options/Options.tscn" id="3_ivwg4"]
[ext_resource type="Theme" uid="uid://cn2j0svnal77l" path="res://Title/Option_theme.tres" id="4_nftbt"]
[ext_resource type="PackedScene" uid="uid://dnof7wcs0plpt" path="res://addons/abyss_history_lib/Scene/DynamicTooltip/tooltip_scene.tscn" id="7_3hhti"]

[sub_resource type="Gradient" id="Gradient_6pyre"]
colors = PackedColorArray(0, 0.74902, 0.498039, 1, 0, 0.74902, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_01b20"]
gradient = SubResource("Gradient_6pyre")
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5a4b"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.6)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17pvn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="InputEventAction" id="InputEventAction_nftbt"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_xqydv"]
events = [SubResource("InputEventAction_nftbt")]

[sub_resource type="InputEventAction" id="InputEventAction_8q5da"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_elb6v"]
events = [SubResource("InputEventAction_8q5da")]

[sub_resource type="Animation" id="Animation_epoy7"]
resource_name = "Exit"
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Panel/Control/MainMenu:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, -0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/Panel/Control/MainMenu:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/Panel/Control/ExitConfirm:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Panel/Control/ExitConfirm:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main/Panel/Control/ExitConfirm:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main/Panel/Control/MainMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.249, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.3, 0.375]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.7, 0.625]
}

[sub_resource type="Animation" id="Animation_joimf"]
resource_name = "Options"
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Panel/Control/MainMenu:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, -0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/Panel/Control/MainMenu:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/Panel/Control/MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.249, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Panel/Control/OptionsContainer:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main/Panel/Control/OptionsContainer:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main/Panel/Control/OptionsContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.3, 0.15]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.7, 0.85]
}

[sub_resource type="Animation" id="Animation_4qau0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressAnyTip:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PressAnyTip:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PressAnyTip:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Panel/Control/MainMenu:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main/Panel/Control/MainMenu:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main/Panel/Control/ExitConfirm:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main/Panel/Control/ExitConfirm:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main/Panel/Control/ExitConfirm:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Main/Panel/Control/MainMenu:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Main/Panel/Control/OptionsContainer:anchor_left")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Main/Panel/Control/OptionsContainer:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Main/Panel/Control/OptionsContainer:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Main:anchor_top")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Main:anchor_bottom")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Main/Panel:theme_override_styles/panel:bg_color")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.101961, 0.101961, 0.101961, 0.6)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Main/Panel:custom_minimum_size")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ie4jr"]
resource_name = "ToMainMenu"
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressAnyTip:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PressAnyTip:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PressAnyTip:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Panel/Control/MainMenu:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [-0.5, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main/Panel/Control/MainMenu:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.45, 0.3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main:anchor_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.55, 0.7]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main/Panel:theme_override_styles/panel:bg_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.101961, 0.101961, 0.101961, 0), Color(0.101961, 0.101961, 0.101961, 0.6)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Main/Panel/Control/MainMenu:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Main/Panel:custom_minimum_size")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.249, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqf80"]
_data = {
&"Exit": SubResource("Animation_epoy7"),
&"Options": SubResource("Animation_joimf"),
&"RESET": SubResource("Animation_4qau0"),
&"ToMainMenu": SubResource("Animation_ie4jr")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqpau")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_01b20")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l7ppy")

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="TitleText" type="Label" parent="Main/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "title.line0"
horizontal_alignment = 1
clip_text = true

[node name="Timer" type="Timer" parent="Main/HBoxContainer"]
process_callback = 0
wait_time = 30.0

[node name="Panel" type="PanelContainer" parent="Main"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x5a4b")

[node name="Control" type="Control" parent="Main/Panel"]
layout_mode = 2

[node name="MainMenu" type="ScrollContainer" parent="Main/Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="Main/Panel/Control/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty" type="Control" parent="Main/Panel/Control/MainMenu/MainMenu"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StartButton" type="Button" parent="Main/Panel/Control/MainMenu/MainMenu"]
layout_mode = 2
text = "title.menu.start"
alignment = 0

[node name="ContinueButton" type="Button" parent="Main/Panel/Control/MainMenu/MainMenu"]
layout_mode = 2
text = "title.menu.continue"
alignment = 0

[node name="OptionsButton" type="Button" parent="Main/Panel/Control/MainMenu/MainMenu"]
layout_mode = 2
text = "title.menu.options"
alignment = 0

[node name="ExitButton" type="Button" parent="Main/Panel/Control/MainMenu/MainMenu"]
layout_mode = 2
text = "title.menu.exit"
alignment = 0

[node name="OptionsContainer" type="VBoxContainer" parent="Main/Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Panel/Control/OptionsContainer"]
layout_mode = 2

[node name="EmptyL" type="Control" parent="Main/Panel/Control/OptionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="OptionsTitle" type="Label" parent="Main/Panel/Control/OptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_17pvn")
text = "title.menu.options"

[node name="Options" parent="Main/Panel/Control/OptionsContainer" instance=ExtResource("3_ivwg4")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_nftbt")

[node name="BackButton" type="Button" parent="Main/Panel/Control/OptionsContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_xqydv")
shortcut_in_tooltip = false
text = "button.back"
alignment = 0

[node name="Empty" type="Control" parent="Main/Panel/Control/OptionsContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ExitConfirm" type="VBoxContainer" parent="Main/Panel/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Empty" type="Control" parent="Main/Panel/Control/ExitConfirm"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Panel/Control/ExitConfirm"]
layout_mode = 2

[node name="EmptyL" type="Control" parent="Main/Panel/Control/ExitConfirm/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Info" type="Label" parent="Main/Panel/Control/ExitConfirm/HBoxContainer"]
layout_mode = 2
text = "exit.ask"

[node name="ConfirmButton" type="Button" parent="Main/Panel/Control/ExitConfirm"]
layout_mode = 2
text = "button.confirm"
alignment = 0

[node name="CancelButton" type="Button" parent="Main/Panel/Control/ExitConfirm"]
layout_mode = 2
shortcut = SubResource("Shortcut_elb6v")
text = "button.cancel"
alignment = 0

[node name="PressAnyTip" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "title.press_to_start"

[node name="TooltipScene" parent="." instance=ExtResource("7_3hhti")]
layout_mode = 0
offset_right = 51.9998
offset_bottom = 22.9999

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pqf80")
}

[connection signal="timeout" from="Main/HBoxContainer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Main/Panel/Control/MainMenu/MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/MainMenu/MainMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/MainMenu/MainMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/MainMenu/MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/OptionsContainer/BackButton" to="." method="_on_options_back_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/ExitConfirm/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Main/Panel/Control/ExitConfirm/CancelButton" to="." method="_on_cancel_button_pressed"]
